re PR fortran/38171 (equivalence and nested modules broken)

2008-11-19  Paul Thomas  <pault@gcc.gnu.org>

	PR fortran/38171
	* module.c (load_equiv): Regression fix; check that equivalence
	members come from the same module only.

2008-11-19  Paul Thomas  <pault@gcc.gnu.org>

	PR fortran/38171
	* gfortran.dg/module_equivalence_6.f90: New test.

From-SVN: r141992